--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".LearnMath"
+            android:name=".fragment.MenuMain"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -63,6 +63,7 @@
         <activity android:name=".random.RandomActivity" />
         <activity android:name=".ranks.RankActivity" />
         <activity android:name=".settings.SettingsActivity" />
+
     </application>
 
 </manifest>
